[package]
name = "breadth"
version = "0.1.0"
authors = ["ifletsomeclaire <69061963+ifletsomeclaire@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ultraviolet = "*"
rayon = "*"
rand = "*"
anyhow = "*"
cgmath = "0.17"



[dev-dependencies]
cgmath = "0.17"
log = "0.4"
png = "0.16"
winit = { version = "0.22.1", features = ["web-sys"] }
rand = { version = "0.7.2", features = ["wasm-bindgen"] }
bytemuck = { version = "1.4", features = ["derive"] }
noise = "0.6"
ddsfile = "0.4"
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
wgpu = "0.6"
env_logger = "0.7"
image = "0.23"